--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     ]
   },
   "dependencies": {
-    "browl-util": "github:killmenot/browl-util",
+    "browl-util": "^0.1.0",
     "debug": "^4.0.1"
   },
   "devDependencies": {
